<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.05" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.06" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.25" />


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="13dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toStartOf="@+id/guideline4"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/guideline3"
                app:layout_constraintTop_toTopOf="parent">



                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/name_edit_text"
                    style="@style/SearchProfessorEditTextStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="30dp"
                    android:hint="@string/nome"
                    android:imeOptions="actionNext"
                    android:text=""
                    android:padding="10dp"
                    android:inputType="textVisiblePassword"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    android:background="@drawable/bg_card_white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />

            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="13dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toStartOf="@+id/guideline4"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/guideline3"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout3">



                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/cognome_edit_text"
                    style="@style/SearchProfessorEditTextStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="0dp"
                    android:padding="10dp"
                    android:imeOptions="actionNext"
                    android:hint="@string/cognome"
                    android:inputType="text"
                    android:background="@drawable/bg_card_white"
                    android:textColor="@color/colorPrimary"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="13dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toStartOf="@+id/guideline4"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/guideline3"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout4">



                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/username_edit_text"
                    style="@style/SearchProfessorEditTextStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="0dp"
                    android:padding="10dp"
                    android:hint="@string/username"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:background="@drawable/bg_card_white"
                    android:textColor="@color/colorPrimary"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="13dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toStartOf="@+id/guideline4"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/guideline3"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout5">



                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/email_edit_text"
                    style="@style/SearchProfessorEditTextStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="0dp"
                    android:imeOptions="actionNext"
                    android:padding="10dp"
                    android:hint="@string/email"
                    android:inputType="text"
                    android:background="@drawable/bg_card_white"
                    android:textColor="@color/colorPrimary"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="13dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toStartOf="@+id/guideline4"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/guideline3"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout6">



                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/password_edit_text"
                    style="@style/SearchProfessorEditTextStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="0dp"
                    android:padding="10dp"
                    android:imeOptions="actionNext"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:background="@drawable/bg_card_white"
                    android:textColor="@color/colorPrimary"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout8"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="13dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toStartOf="@+id/guideline4"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/guideline3"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout7">



                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/conferma_password_edit_text"
                    style="@style/SearchProfessorEditTextStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="0dp"
                    android:padding="10dp"
                    android:imeOptions="actionNext"
                    android:hint="@string/conferma_password"
                    android:inputType="textPassword"
                    android:background="@drawable/bg_card_white"
                    android:textColor="@color/colorPrimary"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout9"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="13dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toStartOf="@+id/guideline4"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/guideline3"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout8">



                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/age_edit_text"
                    style="@style/SearchProfessorEditTextStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="0dp"
                    android:padding="10dp"
                    android:imeOptions="actionNext"
                    android:hint="@string/age"
                    android:inputType="number"
                    android:background="@drawable/bg_card_white"
                    android:textColor="@color/colorPrimary"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>



            <Button
                android:id="@+id/login_button"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="35dp"
                android:background="@drawable/bg_card_primary"
                android:text="@string/registration"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:textAllCaps="false"
                app:layout_constraintTop_toBottomOf="@id/constraintLayout9"
                app:layout_constraintEnd_toStartOf="@+id/guideline4"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/guideline3" />









            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="20dp"
                app:layout_constraintTop_toBottomOf="@+id/login_button"></androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.94" />



        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>
