<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <View
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:background="@color/mainColor"></View>


                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/image_profile"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    app:civ_border_width="0dp"
                    android:elevation="10dp"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="30dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:src="@drawable/ic_account_circle_black_24dp">
                </de.hdodenhof.circleimageview.CircleImageView>


                <TextView
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/image_profile"
                    android:layout_marginTop="10dp"
                    android:padding="5dp"
                    android:textColor="@color/mainColor"
                    android:text="Ciao, @rascione"
                    android:textStyle="bold"
                    android:gravity="center">

                </TextView>
                
                
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/account"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    app:layout_constraintTop_toBottomOf="@+id/username"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="10dp"
                    android:background="@color/lightGray">
                    
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="10dp"
                        android:text="ACCOUNT"
                        android:textColor="@color/darkGray"
                        android:gravity="center_vertical"
                        android:textStyle="bold"></TextView>
                    
                </androidx.constraintlayout.widget.ConstraintLayout>



                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/color"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    app:layout_constraintTop_toBottomOf="@+id/account"
                    app:layout_constraintStart_toStartOf="parent"
                    android:background="@android:color/white">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="10dp"
                        android:text="@string/change_primary"
                        android:paddingStart="70dp"
                        android:textColor="@android:color/black"
                        android:gravity="center_vertical"
                        ></TextView>
                    
                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="5dp"
                        app:layout_constraintTop_toTopOf="parent"
                        android:src="@drawable/ic_color_wheel"
                        app:layout_constraintBottom_toBottomOf="parent"></ImageView>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/logout"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    app:layout_constraintTop_toBottomOf="@+id/color"
                    app:layout_constraintStart_toStartOf="parent"
                    android:background="@android:color/white">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="10dp"
                        android:text="@string/logout"
                        android:paddingStart="70dp"
                        android:textColor="@android:color/black"
                        android:gravity="center_vertical"
                        ></TextView>

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="5dp"
                        app:layout_constraintTop_toTopOf="parent"
                        android:src="@drawable/ic_logout"
                        app:layout_constraintBottom_toBottomOf="parent"></ImageView>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/info"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    app:layout_constraintTop_toBottomOf="@+id/logout"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="10dp"
                    android:background="@color/lightGray">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="10dp"
                        android:text="INFO"
                        android:textColor="@color/darkGray"
                        android:gravity="center_vertical"
                        android:textStyle="bold"></TextView>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/aiuto"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    app:layout_constraintTop_toBottomOf="@+id/info"
                    app:layout_constraintStart_toStartOf="parent"
                    android:background="@android:color/white">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="10dp"
                        android:text="@string/aiuto"
                        android:paddingStart="70dp"
                        android:textColor="@android:color/black"
                        android:gravity="center_vertical"
                        ></TextView>

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="5dp"
                        app:layout_constraintTop_toTopOf="parent"
                        android:src="@drawable/ic_about"
                        app:layout_constraintBottom_toBottomOf="parent"></ImageView>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/privacy"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    app:layout_constraintTop_toBottomOf="@+id/aiuto"
                    app:layout_constraintStart_toStartOf="parent"
                    android:background="@android:color/white">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="10dp"
                        android:text="@string/privacy"
                        android:paddingStart="70dp"
                        android:textColor="@android:color/black"
                        android:gravity="center_vertical"
                        ></TextView>

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="5dp"
                        app:layout_constraintTop_toTopOf="parent"
                        android:src="@drawable/ic_password"
                        app:layout_constraintBottom_toBottomOf="parent"></ImageView>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/terms_and_conditions"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    app:layout_constraintTop_toBottomOf="@+id/privacy"
                    app:layout_constraintStart_toStartOf="parent"
                    android:background="@android:color/white">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="10dp"
                        android:text="@string/terms_and_condition"
                        android:paddingStart="70dp"
                        android:textColor="@android:color/black"
                        android:gravity="center_vertical"
                        ></TextView>

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="5dp"
                        app:layout_constraintTop_toTopOf="parent"
                        android:src="@drawable/ic_terms"
                        app:layout_constraintBottom_toBottomOf="parent"></ImageView>

                </androidx.constraintlayout.widget.ConstraintLayout>


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    app:layout_constraintTop_toBottomOf="@+id/terms_and_conditions"
                    app:layout_constraintStart_toStartOf="parent"
                    android:background="@android:color/white">

                </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>


        </ScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>